--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "FS-2020",
   "main": "src/main.js",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node src/main.js",
+    "start": "node_modules/.bin/babel-node src/main.js\n",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
