--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,20 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "epilogue": "^0.7.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.12",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "promisify": "0.0.3",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^11.0.1"
+  },
   "scripts": {
     "start": "node_modules/.bin/babel-node src/main.js\n",
     "test": "echo \"Error: no test specified\" && exit 1"
