added oAth controller, model and mongoose schemas

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.7.12",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "promisify": "0.0.3",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2"
