--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "epilogue": "^0.7.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
