--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "epilogue": "^0.7.1",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.0",
     "mongoose": "^5.7.12",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
