--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,9 @@
     "sqlite3": "^4.0.2"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "standard": "^11.0.1"
   },
   "scripts": {
