--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "fs2020": {
+    "mis-angular-frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/fs2020",
+            "outputPath": "dist/mis-angular-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,7 +28,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -63,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fs2020:build"
+            "browserTarget": "mis-angular-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fs2020:build:production"
+              "browserTarget": "mis-angular-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fs2020:build"
+            "browserTarget": "mis-angular-frontend:build"
           }
         },
         "test": {
@@ -89,7 +88,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -112,16 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fs2020:serve"
+            "devServerTarget": "mis-angular-frontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fs2020:serve:production"
+              "devServerTarget": "mis-angular-frontend:serve:production"
             }
           }
         }
       }
-    }
-  },
-  "defaultProject": "fs2020"
+    }},
+  "defaultProject": "mis-angular-frontend"
 }
