--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fs2020",
+  "name": "mis-angular-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,28 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
+    "@angular/animations": "~8.1.2",
+    "@angular/cdk": "~8.1.1",
+    "@angular/common": "~8.1.2",
+    "@angular/compiler": "~8.1.2",
+    "@angular/core": "~8.1.2",
+    "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.1.1",
+    "@angular/platform-browser": "~8.1.2",
+    "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/router": "~8.1.2",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "~8.1.1",
-    "@angular/language-service": "~8.1.1",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "~8.1.2",
+    "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
